--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>Twitter Characters Count</h1>
+<small>A URL of any length will be altered to 23 characters, even if the link itself is less than 23 characters long. Your character count will reflect this.</small>
 <textarea id="twitter-text" rows="10" style="width:100%"></textarea>
-<div>Count: <p id="twitter-count"></p></div>
+<div>Characters Left: <span id="twitter-count">280</span></div>
+<br>
+<div>Source https://gist.github.com/tomykaira/1399315 </div>
+<div>Source https://help.twitter.com/en/using-twitter/how-to-tweet-a-link </div>
